--- a/lesson 3 Player Growth, Score, and Sprite Images/step5_soundeffect.html
+++ b/lesson 3 Player Growth, Score, and Sprite Images/step5_soundeffect.html
@@ -18,8 +18,12 @@
             let {init, Sprite, GameLoop, initKeys, keyPressed, load, Text} = kontra;
             let {canvas, context} = init('game');
             initKeys();
-            load('background.png', 'player.png').then(images => {
-                let [backgroundImage, playerImage] = images;
+
+            kontra.load('background.png', 'player.png', 'enemy.png', 'bubbles.mp3').then(images => {  // ADDED SOUND HERE
+                let [backgroundImage, playerImage, enemyImage, bubbleSound] = images;               // ADDED SOUND HERE
+
+                let bubbleSoundEffect = new Audio('bubbles.mp3');
+
                 let background = Sprite({
                     x: 0,
                     y: 0,
@@ -30,15 +34,15 @@
                         this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
+
                 let player = Sprite({
                     x: 100,
                     y: 100,
                     width: 40,
                     height: 30,
                     image: playerImage,
-                    size: 20,              //add this line so my fish can eat smaller enemies
+                    size: 20,   //add this line so the fish can eat smaller enemies.
                     update() {
-                        console.log(this.x + "," + this.y);
                         if (keyPressed('arrowleft')) this.x -= 2;
                         if (keyPressed('arrowright')) this.x += 2;
                         if (keyPressed('arrowup')) this.y -= 2;
@@ -49,7 +53,7 @@
                     },
                 });
 
-                let enemies = []; // preparing an enemy list
+                let enemies = [];
 
                 function isoverlapping(min1, max1, min2, max2) {
                     return max1 >= min2 && max2 >= min1;
@@ -62,9 +66,8 @@
                     );
                 }
 
-                let spawnTimer = 60; // 60 frames = ~1 second
-
-                let score = 0;    //Added score tracking
+                let spawnTimer = 60;
+                let score = 0;
 
                 let scoreText = Text({
                     text: 'Score: 0',
@@ -78,22 +81,27 @@
                     update() {
                         spawnTimer--;
                         if (spawnTimer <= 0) {
+
+                            let size = Math.random() * 25 + 15;
+
                             let newEnemy = kontra.Sprite({
-                                x: 800,
-                                y: Math.random() * (canvas.height - 30),
-                                width: 60,
-                                height: 30,
-                                dx: -(Math.random() * 3 + 1),
-                                color: 'red',
+                                x: canvas.width,
+                                y: Math.random() * (canvas.height - size),
+                                width: size,
+                                height: size,
+                                size: size,
+                                dx: -(Math.random() * 2 + 1),
+                                image: enemyImage,
+                                wasEaten: false,
                                 update() {
                                     this.advance();
                                     if (this.x + this.width < 0) this.ttl = 0;
                                 },
                                 draw() {
-                                    this.context.fillStyle = this.color;
-                                    this.context.fillRect(this.x, this.y, this.width, this.height);
+                                    this.context.drawImage(this.image, this.x, this.y, this.width, this.height);
                                 }
                             });
+
                             enemies.push(newEnemy);
                             spawnTimer = 60;
                         }
@@ -102,30 +110,32 @@
                         enemies.forEach(e => e.update());
                         enemies = enemies.filter(e => e.isAlive());
 
-                        enemies.forEach(e => {
-                            if (iscolliding(player, e) && !e.wasEaten) {             //collision logic
-                                if (e.width * e.height < player.size * player.size) {
+                        enemies.forEach(e => {       //updated collision logic
+                            if (iscolliding(player, e) && !e.wasEaten) {
+                                if (e.size < player.size) {
                                     e.wasEaten = true;
-                                    e.color = "blue";     // Optional visual feedback
+                                    bubbleSoundEffect.currentTime = 0;   // ADDED SOUND HERE
+                                    bubbleSoundEffect.play();
                                     player.size += 2;
                                     player.width = player.size;
                                     player.height = player.size;
                                     score += 1;
                                 } else {
-                                    console.log("That fish is too big!");       // Optional: shrink player or end game
+                                    console.log("That fish is too big!");
                                 }
                             }
                         });
 
-                        scoreText.text = 'Score: ' + score;     //Update score text
+                        scoreText.text = 'Score: ' + score;
                     },
                     render() {
                         background.draw();
                         player.draw();
                         enemies.forEach(e => e.draw());
-                        scoreText.render();    //draw score text
+                        scoreText.render();
                     }
                 });
+
                 loop.start();
             });
         </script>
