--- a/lesson 3 Player Growth, Score, and Sprite Images/step5_soundeffect.html
+++ b/lesson 3 Player Growth, Score, and Sprite Images/step5_soundeffect.html
@@ -92,7 +92,6 @@
                                 size: size,
                                 dx: -(Math.random() * 2 + 1),
                                 image: enemyImage,
-                                wasEaten: false,
                                 update() {
                                     this.advance();
                                     if (this.x + this.width < 0) this.ttl = 0;
@@ -111,15 +110,15 @@
                         enemies = enemies.filter(e => e.isAlive());
 
                         enemies.forEach(e => {       //updated collision logic
-                            if (iscolliding(player, e) && !e.wasEaten) {
+                            if (iscolliding(player, e)) {
                                 if (e.size < player.size) {
-                                    e.wasEaten = true;
-                                    bubbleSoundEffect.currentTime = 0;   // ADDED SOUND HERE
-                                    bubbleSoundEffect.play();
+                                    e.ttl = 0;
                                     player.size += 2;
                                     player.width = player.size;
                                     player.height = player.size;
                                     score += 1;
+                                    bubbleSoundEffect.currentTime = 0;   // Added sound here
+                                    bubbleSoundEffect.play();   //Added sound here
                                 } else {
                                     console.log("That fish is too big!");
                                 }
